update made chages due to circular dependencies, finish with all the adaprters, and reate config in order to use domain 100%

--- a/carrito-service/src/main/resources/application.yml
+++ b/carrito-service/src/main/resources/application.yml
@@ -1,7 +1,18 @@
 server:
   port: 8084
 
+logging:
+  level:
+    org:
+      springframework:
+        beans:
+          factory:
+            support: DEBUG
+        context: DEBUG
+
 spring:
+  main:
+    allow-circular-references: false
   application:
     name: carrito-service
 
