--- a/carrito-service/src/main/resources/application.yml
+++ b/carrito-service/src/main/resources/application.yml
@@ -9,31 +9,7 @@ spring:
   application:
     name: carrito-service
 
-  datasource:
-    url: jdbc:mysql://localhost:3306/arka?useSSL=false&allowPublicKeyRetrieval=true&serverTimezone=UTC
-    username: root
-    password: Developer123.
-    driver-class-name: com.mysql.cj.jdbc.Driver
-
-  rabbitmq:
-    host: localhost
-    port: 5672
-    username: arka
-    password: arka123
-
-  jpa:
-    hibernate:
-      ddl-auto: validate
-    show-sql: true
-    properties:
-      hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-
-eureka:
-  client:
-    service-url:
-      defaultZone: http://admin:admin123@localhost:8761/eureka/
-    register-with-eureka: true
-    fetch-registry: true
-    registry-fetch-interval-seconds: 30
-    eureka-server-connect-timeout-seconds: 10
+  config:
+    import: optional:configserver:http://localhost:8888
+  profiles:
+      active: dev
