--- a/carrito-service/src/main/resources/application.yml
+++ b/carrito-service/src/main/resources/application.yml
@@ -13,3 +13,9 @@ spring:
     import: optional:configserver:http://localhost:8888
   profiles:
       active: dev
+
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: arka
+    password: arka123
