--- a/carrito-service/src/main/resources/application.yml
+++ b/carrito-service/src/main/resources/application.yml
@@ -3,7 +3,7 @@ server:
 
 notificacion:
   webhook:
-    url: http://localhost:8080/webhook-mock
+    url: https://n8nworkflows1.app.n8n.cloud/webhook-test/44e87a4a-2b6b-4f81-84ef-1c336eb39ced
 
 spring:
   application:
